fix scrollbar

--- a/public/wp-content/themes/norhagewebshop/blocks/products-slider-block/productsSliderBlock.css
+++ b/public/wp-content/themes/norhagewebshop/blocks/products-slider-block/productsSliderBlock.css
@@ -1,6 +1,3 @@
-::-webkit-scrollbar{
-	display: none;
-}
 .products-slider-block{
 	position: relative;
 	padding: 2em 0 2em 0;
@@ -53,6 +50,9 @@
 	-ms-overflow-style: none;  /* IE and Edge */
 	scrollbar-width: none;  /* Firefox */
 	scroll-behavior: smooth;
+}
+.products-slider-block .slider::-webkit-scrollbar{
+	display: none;
 }
 .products-slider-block .slider-title-col{
 	flex: 25% 0 0;
